# dynamic_signing

./: Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
cert_client/: CHANGELOG.md  Cargo.toml
cert_client/src/: main.rs
cert_client/ui/: appwindow.slint
cert_client/wix/: main.wxs
